Avoid flickering on page load

--- a/onegov/gazette/theme/styles/gazette.scss
+++ b/onegov/gazette/theme/styles/gazette.scss
@@ -903,3 +903,7 @@ table.changes {
         color: #fff
     }
 }
+
+.header {
+    min-height: 100px;
+}
